# api_docs.json
@@ -830,6 +830,156 @@
         }
       }
     ],
+    "educations": [
+      {
+        "action": "GET",
+        "uri": "\/users\/:user_id\/educations",
+        "authentication" : true,
+        "description": "Getting the user's educations",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "response" : {
+           "educations":[{
+              "id":59,
+              "created_at":"2016-12-17T00:33:19.041Z",
+              "name":"Skiles, Schoen and Torp",
+              "year_from":1998,
+              "year_to":1288,
+              "user_id":694,
+              "website":"http://ruelward.biz/ozella",
+              "degree":{
+                 "id":79,
+                 "created_at":"2016-12-17T00:33:18.936Z",
+                 "name":"Sleek Copper Hat",
+                 "position":0
+              }
+           }]
+        }
+      },
+      {
+        "action": "POST",
+        "uri": "\/users\/:user_id\/educations",
+        "authentication" : true,
+        "description": "Creating a user education",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "params" : {
+          "education[name]" : {
+            "type" : "string",
+            "description" : "The name of the education",
+            "required" : false
+          },
+          "education[year_from]" : {
+            "type" : "integer",
+            "description" : "The year_from of the education",
+            "required" : false
+          },
+          "education[year_to]" : {
+            "type" : "integer",
+            "description" : "The year_to of the education",
+            "required" : false
+          },
+          "education[website]" : {
+            "type" : "string",
+            "description" : "The website of the education",
+            "required" : false
+          },
+          "education[degree_id]" : {
+            "type" : "integer",
+            "description" : "The id of the degree",
+            "required" : false
+          }
+        },
+        "response" : {
+           "education":{
+              "id":59,
+              "created_at":"2016-12-17T00:33:19.041Z",
+              "name":"Skiles, Schoen and Torp",
+              "year_from":1998,
+              "year_to":1288,
+              "user_id":694,
+              "website":"http://ruelward.biz/ozella",
+              "degree":{
+                 "id":79,
+                 "created_at":"2016-12-17T00:33:18.936Z",
+                 "name":"Sleek Copper Hat",
+                 "position":0
+              }
+           }
+        }
+      },
+      {
+        "action": "PUT",
+        "uri": "\/users\/:user_id\/educations\/:id",
+        "authentication" : true,
+        "description": "Updating a user's education",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "params" : {
+          "education[name]" : {
+            "type" : "string",
+            "description" : "The name of the education",
+            "required" : false
+          },
+          "education[year_from]" : {
+            "type" : "integer",
+            "description" : "The year_from of the education",
+            "required" : false
+          },
+          "education[year_to]" : {
+            "type" : "integer",
+            "description" : "The year_to of the education",
+            "required" : false
+          },
+          "education[website]" : {
+            "type" : "string",
+            "description" : "The website of the education",
+            "required" : false
+          },
+          "education[degree_id]" : {
+            "type" : "integer",
+            "description" : "The id of the degree",
+            "required" : false
+          }
+        },
+        "response" : {
+           "education":{
+              "id":59,
+              "created_at":"2016-12-17T00:33:19.041Z",
+              "name":"Skiles, Schoen and Torp",
+              "year_from":1998,
+              "year_to":1288,
+              "user_id":694,
+              "website":"http://ruelward.biz/ozella",
+              "degree":{
+                 "id":79,
+                 "created_at":"2016-12-17T00:33:18.936Z",
+                 "name":"Sleek Copper Hat",
+                 "position":0
+              }
+           }
+        }
+      },
+      {
+        "action": "DELETE",
+        "uri": "\/users\/:user_id\/educations\/:id",
+        "authentication" : true,
+        "description": "Deleting a user education",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "response" : {
+          "status" : 204
+        }
+      }
+    ],
     "experiences": [
       {
         "action" : "GET",
@@ -2701,6 +2851,142 @@
             },
             "notifiable_type": "Follow"
           }
+        }
+      }
+    ],
+    "offerings": [
+      {
+        "action": "GET",
+        "uri": "\/users\/:user_id\/offerings",
+        "authentication" : true,
+        "description": "Getting the user's offerings",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "response" : {
+           "offerings":[{
+              "id":53,
+              "created_at":"2016-12-17T00:28:24.842Z",
+              "price":1,
+              "user_id":687,
+              "service":{
+                 "id":111,
+                 "created_at":"2016-12-17T00:28:24.767Z",
+                 "name":"Jacobi-Miller",
+                 "position":1
+              },
+              "category":{
+                 "id":67,
+                 "created_at":"2016-12-17T00:28:24.761Z",
+                 "name":"Reichert, Cartwright and Schneider"
+              }
+           }]
+        }
+      },
+      {
+        "action": "POST",
+        "uri": "\/users\/:user_id\/offerings",
+        "authentication" : true,
+        "description": "Creating a user offerings",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "params" : {
+          "offering[price]" : {
+            "type" : "integer",
+            "description" : "The price of the offering",
+            "required" : false
+          },
+          "offering[service_id]" : {
+            "type" : "integer",
+            "description" : "The id of the service",
+            "required" : false
+          },
+          "offering[category_id]" : {
+            "type" : "integer",
+            "description" : "The id of the category",
+            "required" : false
+          }
+        },
+        "response" : {
+           "offering":{
+              "id":53,
+              "created_at":"2016-12-17T00:28:24.842Z",
+              "price":1,
+              "user_id":687,
+              "service":{
+                 "id":111,
+                 "created_at":"2016-12-17T00:28:24.767Z",
+                 "name":"Jacobi-Miller",
+                 "position":1
+              },
+              "category":{
+                 "id":67,
+                 "created_at":"2016-12-17T00:28:24.761Z",
+                 "name":"Reichert, Cartwright and Schneider"
+              }
+           }
+        }
+      },
+      {
+        "action": "PUT",
+        "uri": "\/users\/:user_id\/offerings\/:id",
+        "authentication" : true,
+        "description": "Updating a user's offerings",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "params" : {
+          "offering[price]" : {
+            "type" : "integer",
+            "description" : "The price of the offering",
+            "required" : false
+          },
+          "offering[service_id]" : {
+            "type" : "integer",
+            "description" : "The id of the service",
+            "required" : false
+          },
+          "offering[category_id]" : {
+            "type" : "integer",
+            "description" : "The id of the category",
+            "required" : false
+          }
+        },
+        "response" : {
+           "offering":{
+              "id":53,
+              "created_at":"2016-12-17T00:28:24.842Z",
+              "price":1,
+              "user_id":687,
+              "service":{
+                 "id":111,
+                 "created_at":"2016-12-17T00:28:24.767Z",
+                 "name":"Jacobi-Miller",
+                 "position":1
+              },
+              "category":{
+                 "id":67,
+                 "created_at":"2016-12-17T00:28:24.761Z",
+                 "name":"Reichert, Cartwright and Schneider"
+              }
+           }
+        }
+      },
+      {
+        "action": "DELETE",
+        "uri": "\/users\/:user_id\/offerings\/:id",
+        "authentication" : true,
+        "description": "Deleting a user offering",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "response" : {
+          "status" : 204
         }
       }
     ],
